--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -17,6 +17,12 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    default_locale: 'fr'
+    translator:
+        paths:
+            - '%kernel.project_dir%/translations'
+        fallbacks:
+            - 'en'
 
 when@test:
     framework:
